opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/toplevel_backend"
bug-reports: "https://github.com/janestreet/toplevel_backend/issues"
dev-repo: "git+https://github.com/janestreet/toplevel_backend.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/toplevel_backend/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "base"
  "core"
  "parsexp"
  "ppx_here"
  "ppx_jane"
  "ppx_optcomp"
  "stdio"
  "dune"        {>= "3.17.0"}
  "ocamlfind"   {>= "1.7.2"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Shared backend for setting up toplevels"
description: "
Module for setting up dependencies (like printers and liblinks) for toplevels.
"
